Initial commit for Simple To-Do App with basic structure and functionality. Added package.json for dependencies, HTML files for landing, login, main, and register pages, CSS for styling, and server setup with Express and MySQL for user authentication and task management. Included SQL script for database creation and table structures.

--- a/public/main.html
+++ b/public/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do App</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/global.css" />
     <link rel="icon" href="favicon.png" type="image/x-icon" />
     <link
       rel="stylesheet"
@@ -47,8 +47,12 @@
       <section class="completed-section">
         <h2>completed tasks</h2>
         <ul id="completed-list">
-          <li>Water the plants</li>
-          <li>Clean my cupboard</li>
+          <div class="completed-task">
+            <li>Water the plants</li>
+            <button class="delete-btn">
+              <i class="fa-solid fa-trash"></i>
+            </button>
+          </div>
         </ul>
       </section>
     </main>
