--- a/public/landing.html
+++ b/public/landing.html
@@ -10,8 +10,12 @@
   </head>
   <body>
     <div id="landing-page">
-      <h1>Welcome to ToDo</h1>
-      <p>Organize your day, one task at a time</p>
+      <div class="content">
+        <h1>Welcome to <span class="content-title">todo</span></h1>
+        <p>Organize your day, one task at a time</p>
+        <button id="enter-btn">Get Started</button>
+      </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
