--- a/public/login.html
+++ b/public/login.html
@@ -8,5 +8,23 @@
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/login.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="login-page">
+      <div class="content">
+        <h1>Login</h1>
+        <form id="login-form">
+          <input type="text" id="username" placeholder="Username" required />
+          <input
+            type="password"
+            id="password"
+            placeholder="Password"
+            required
+          />
+          <button type="submit">Login</button>
+        </form>
+        <p>Don't have an account? <a href="register.html">Register here</a></p>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
