--- a/public/register.html
+++ b/public/register.html
@@ -8,5 +8,23 @@
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/login.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="login-page">
+      <div class="content">
+        <h1>Register</span></h1>
+        <form id="register-form">
+          <input type="text" id="username" placeholder="Username" required />
+          <input
+            type="password"
+            id="password"
+            placeholder="Password"
+            required
+          />
+          <button type="submit">Register</button>
+        </form>
+        <p>Already have an account? <a href="login.html">Login here</a></p>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
